--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,12 @@ jobs:
     docker:
       - image: kartavyatyagi/kattu:latest  # Use your Docker Hub image
     steps:
+      - checkout
+
+      - run:
+          name: Change Working Directory (if required)
+          command: cd /root/Project/Docker/getting-started-app/Circle-CI-nodeapp  # Ensure this matches your app structure
+
       - run:
           name: Verify Node Version
           command: node --version
